syntax = "proto3";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "GrpcReviewService";

service GrpcReviewService{
    rpc AddReview(GrpcReviewDto) returns (google.protobuf.StringValue);
    rpc UpdateReview(GrpcReviewDto) returns(Empty);
    rpc DeleteReview(GrpcReviewDto) returns(Empty);
    rpc GetReviewsByInventoryId(google.protobuf.StringValue) returns(GrpcListedReviews);
    rpc GetReviewsByUserId(GrpcUserId) returns(GrpcListedReviews);
    rpc GetReviewByUserIdAndInventoryId(GrpcUserAndInventoryId) returns(GrpcReviewDto);
    rpc GetReviewById(google.protobuf.StringValue) returns (GrpcReviewDto);
}

message GrpcReviewDto {
    optional string id = 1;
    string inventory_id = 2;
    int32 user_id = 3;
    string username = 4;
    int32 stars = 5;
    optional string comment = 6;
}

message GrpcListedReviews{
    repeated GrpcReviewDto dto = 1;
}

message GrpcUserAndInventoryId{
    string inventory_id = 1;
    int32 user_id = 2;
}

message GrpcUserId{
    int32 user_id = 1;
}


message Empty {

}
